tests/builtins/errors/input_extra_arg.orus
fn main() {
    input("first", "second")
}
